/*
	DO NOT EDIT THIS FILE
	It is automatically generated by tool
*/

syntax = "proto2"; 
package _footMan_client_;

message _Human_ {
optional uint32 id = 1;
optional string name = 2;
optional string path = 3;
optional uint32 attack = 4;
optional uint32 defence = 5;
optional uint32 heart = 6;
optional uint32 speed = 7;
optional uint32 level = 8;
optional bool spec = 9;
optional uint32 chDef = 10;
optional uint32 chDefVal = 11;
optional uint32 chAtk = 12;
optional uint32 chAtkVal = 13;
optional uint32 extraDmg = 14;
optional uint32 extraDmgVal = 15;
optional uint32 cost = 16;
optional uint32 maxNum = 17;
}

message _Demon_ {
optional uint32 id = 1;
optional string name = 2;
optional string path = 3;
optional uint32 attack = 4;
optional uint32 defence = 5;
optional uint32 heart = 6;
optional uint32 speed = 7;
optional uint32 level = 8;
optional bool spec = 9;
optional uint32 chDef = 10;
optional uint32 chDefVal = 11;
optional uint32 chAtk = 12;
optional uint32 chAtkVal = 13;
optional uint32 extraDmg = 14;
optional uint32 extraDmgVal = 15;
optional uint32 cost = 16;
optional uint32 maxNum = 17;
}

message _Excel_ {
repeated _Human_ HumanData = 1;
repeated _Demon_ DemonData = 2;
}
